package behavioral.observerPattern

interface OnChangeListener {

    fun onChange(v: View)

}